# sbwt

./: .gitignore  CMakeLists.txt  Makefile  READEME  TODO.md  alphabet.c  alphabet.h  build_index.cc  const.h  count_occ.cc  endian_swap.h  io_build_index.cpp  io_build_index.h  log.cc  log.h  main.cc  ref_read.h  sbwt.cc  sbwt.h  sbwt_aligner.cpp  sbwt_search.cpp  sbwt_search.h  sbwt_test.cpp  sbwt_test_bitset.cpp  sequence_pack.cpp  sequence_pack.h  test_io.cpp  test_io.h  utility.cc  utility.h  word_io.h
SeqAn-1.1/seqan/basic/: basic_allocator_chunkpool.h  basic_allocator_multipool.h  basic_alphabet_trait_basic.h  basic_metaprogramming.h
SeqAn-1.1/seqan/sequence/: string_pointer.h
script/: check_stash_valid.sh  fastq_to_fasta.sh  test.count_occ.sh
script/python-demo/: bwa.py  gen_sanple_seq.py  mbwa.py
script/test-sbwt/: GenRandomDnas.py  GenReferenceAndReads.py  TODO-list.md  TestSbwtAligner.py  check_position.py  filter.py  gen.rep.py  grap.chr1.py  replica.py  see.build.log.txt  verify.alignment.with.bowtie.py
